--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gerenciar Produtos</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/logos/favicon-32x32.png" />
   <style>
-    body { font-family: 'Roboto', Arial, sans-serif; padding: 20px; background-color: #f4f5f5; }
+    body { font-family: 'Roboto', Arial, sans-serif; padding: 20px; background-color: #f5f5f5; }
     h1, h3 { text-align: center; color: #333; }
     form { max-width: 500px; margin: auto; display: flex; flex-direction: column; gap: 10px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     input, select, textarea, button { padding: 10px; border: 1px solid #ddd; border-radius: 4px; font-size: 16px; }
@@ -19,28 +18,19 @@
     #produtos-cadastrados { margin: 20px auto; max-width: 900px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     #produtos-cadastrados table { width: 100%; border-collapse: collapse; }
     #produtos-cadastrados th, #produtos-cadastrados td { padding: 10px; border: 1px solid #ddd; text-align: left; }
-    th { background-color: #f9f9f9; }
+    #produtos-cadastrados th { background-color: #f9f9f9; }
     #produtos-cadastrados button.excluir { background-color: #dc3545; padding: 5px 10px; font-size: 14px; border: none; color: white; border-radius: 4px; cursor: pointer; }
     #produtos-cadastrados button.excluir:hover { background-color: #c82333; }
-    #produtos-cadastrados button.editar { background-color: #007bff; padding: 5px 10px; font-size: 14px; border: none; color: white; border-radius: 4px; cursor: pointer; margin-right: 5px; }
-    #produtos-cadastrados button.editar:hover { background-color: #0056b3; }
-    button.cancelar { background-color: #6c757d; }
-    button.cancelar:hover { background-color: #5a6268; }
     .thumbnail { width: 50px; height: 50px; object-fit: cover; margin: 2px; cursor: pointer; border-radius: 4px; }
-    #imagens-atuais { margin-top: 10px; display: flex; flex-wrap: wrap; gap: 5px; }
-    #loading-spinner { display: none; text-align: center; margin: 10px 0; }
-    #loading-spinner::after { content: ''; display: inline-block; width: 24px; height: 24px; border: 3px solid #ff6200; border-top: 3px solid transparent; border-radius: 50%; animation: spin 1s linear infinite; }
-    @keyframes spin { to { transform: rotate(360deg); } }
   </style>
 </head>
 <body>
-  <h1 id="titulo-form">Adicionar Produto</h1>
+  <h1>Adicionar Produto</h1>
   <form id="form-produto" enctype="multipart/form-data">
-    <input type="hidden" name="id" id="produto-id" />
     <input type="text" name="nome" placeholder="Nome do produto" required />
-    <textarea name="text" id="descricao" placeholder="Descrição do produto" required></textarea>
-    <select name="form" id="categoria" required>
-      <option value="" disabled selected>Selecione a categoria</option>
+    <textarea name="descricao" placeholder="Descrição do produto" required></textarea>
+    <select name="categoria" required>
+      <option value="" disabled selected>Selecione uma categoria</option>
       <option value="eletronicos">Eletrônicos</option>
       <option value="moda">Moda</option>
       <option value="fitness">Fitness</option>
@@ -68,14 +58,9 @@
     </select>
     <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+" />
     <input type="number" name="preco" placeholder="Preço do produto (ex.: 99.99)" step="0.01" min="0" required />
-    <input type="file" name="imagens" accept="image/*" multiple />
-    <div id="imagens-atuais"></div>
-    <div class="form-buttons">
-      <button type="submit">Salvar</button>
-      <button type="button" class="cancelar" id="cancelar-edicao" style="display: none;">Cancelar</button>
-    </div>
+    <input type="file" name="imagens" accept="image/*" multiple required />
+    <button type="submit">Adicionar</button>
   </form>
-  <div id="loading-spinner"></div>
   <div id="mensagem"></div>
   <div id="erro"></div>
 
@@ -101,18 +86,15 @@
   </div>
 
   <script>
-    const API_URL = 'https://centrodecompras-backend.onrender.com';
+    const API_URL = 'https://centrodecompra-backend.onrender.com';
 
     async function carregarProdutos() {
       try {
-        console.log('Carregando produtos de:', `${API_URL}/api/produtos`);
-        const res = await fetch(`${API_URL}/api/produtos?_t=${Date.now()}`, { cache: 'no-cache' });
-        if (!res.ok) throw new Error(`Erro ao carregar produtos: ${res.status}`);
+        const res = await fetch(`${API_URL}/api/produtos`);
+        if (!res.ok) throw new Error('Falha ao buscar produtos');
         const produtos = await res.json();
-        console.log('Produtos carregados:', produtos.map(p => ({ id: p._id, nome: p.nome })));
         preencherTabela(produtos);
       } catch (err) {
-        console.error('Erro ao carregar produtos:', err);
         document.getElementById('lista-produtos').innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">${err.message}</td></tr>`;
       }
     }
@@ -120,148 +102,71 @@
     function preencherTabela(produtos) {
       const tbody = document.getElementById('lista-produtos');
       tbody.innerHTML = '';
-      if (!produtos || produtos.length === 0) {
+      if (produtos.length === 0) {
         tbody.innerHTML = '<tr><td colspan="8" style="text-align:center;">Nenhum produto cadastrado.</td></tr>';
         return;
       }
       produtos.forEach((produto) => {
-        console.log('Exibindo produto com ID:', produto._id);
-        const precoFormatado = `R$ ${parseFloat(produto.preco || 0).toFixed(2).replace('.', ',')}`;
-        const imagens = Array.isArray(produto.imagens) ? produto.imagens : [];
+        const precoFormatado = `R$ ${parseFloat(produto.preco).toFixed(2).replace('.', ',')}`;
+        const imagens = produto.imagens || [];
         const miniaturas = imagens.length > 0
-          ? imagens.map((img, i) => `<img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" onerror="this.src='/imagens/placeholder.jpg'" />`).join('')
+          ? imagens.map((img, i) => `<img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" />`).join('')
           : 'Sem imagens';
 
         tbody.innerHTML += `
           <tr>
-            <td>${produto.nome || 'N/A'}</td>
+            <td>${produto.nome}</td>
             <td>${produto.descricao || 'N/A'}</td>
-            <td>${produto.categoria || 'N/A'}</td>
-            <td>${produto.loja || 'N/A'}</td>
-            <td><a href="${produto.link || '#'}" target="_blank" rel="noopener noreferrer">Link</a></td>
+            <td>${produto.categoria}</td>
+            <td>${produto.loja}</td>
+            <td><a href="${produto.link}" target="_blank" rel="noopener noreferrer">Link</a></td>
             <td>${precoFormatado}</td>
             <td>${miniaturas}</td>
-            <td>
-              <button class="editar" onclick="editarProduto('${produto._id}')">Editar</button>
-              <button class="excluir" onclick="excluirProduto('${produto._id}')">Excluir</button>
-            </td>
+            <td><button class="excluir" onclick="excluirProduto('${produto._id}')">Excluir</button></td>
           </tr>
         `;
       });
     }
 
-    async function editarProduto(id) {
-      const loadingSpinner = document.getElementById('loading-spinner');
-      try {
-        loadingSpinner.style.display = 'block';
-        console.log('Editando produto com ID:', id);
-        const res = await fetch(`${API_URL}/api/produtos/${id}`, { cache: 'no-store' });
-        console.log('Status da resposta:', res.status);
-        if (!res.ok) {
-          if (res.status === 404) {
-            throw new Error('Produto não encontrado. Pode ter sido excluído.');
-          }
-          throw new Error(`Erro ao buscar produto: ${res.status}`);
-        }
-        const produto = await res.json();
-        console.log('Produto retornado:', produto);
-
-        const form = document.getElementById('form-produto');
-        form.querySelector('[name="id"]').value = produto._id || '';
-        form.querySelector('[name="nome"]').value = produto.nome || '';
-        form.querySelector('[name="forma"]').value = produto.descricao || '';
-        form.querySelector('[name="categoria"]').value = produto.categoria || '';
-        form.querySelector('[name="loja"]').value = produto.loja || '';
-        form.querySelector('[name="link"]').value = produto.link || '';
-        form.querySelector('[name="preco"]').value = produto.preco || '';
-        form.querySelector('[name="imagens"]').required = false;
-
-        const imagensAtuais = document.getElementById('imagens-atuais');
-        imagensAtuais.innerHTML = produto.imagens && produto.imagens.length > 0
-          ? produto.imagens.map((img, i) => `<img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" onerror="this.src='/imagens/placeholder.jpg'" />`).join('') 
-          : 'Nenhuma imagem atual';
-
-        document.getElementById('titulo-form').textContent = 'Editar Produto';
-        document.getElementById('cancelar-edicao').style.display = 'inline-block';
-        form.querySelector('button[type="submit"]').textContent = 'Salvar alterações';
-      } catch (err) {
-        console.error('Erro na edição:', err);
-        document.getElementById('erro').textContent = err.message;
-      } finally {
-        loadingSpinner.style.display = 'none';
-      }
-    }
-
     async function excluirProduto(id) {
-      if (!confirm('Confirma a exclusão do produto?')) return;
+      if (!confirm('Confirma a exclusão deste produto?')) return;
       try {
-        console.log('Excluindo produto com ID:', id);
         const res = await fetch(`${API_URL}/api/produtos/${id}`, { method: 'DELETE' });
-        if (!res.ok) throw new Error(`Erro ao excluir produto: ${res.status}`);
-        alert('Produto excluído com sucesso!');
+        if (!res.ok) throw new Error('Erro ao excluir produto');
+        alert('Produto excluído com sucesso');
         carregarProdutos();
       } catch (err) {
-        console.error('Erro ao excluir:', err);
         alert(err.message);
       }
-    }
-
-    function resetarFormulario() {
-      const form = document.getElementById('form-produto');
-      form.reset();
-      form.querySelector('[name="id"]').value = '';
-      form.querySelector('[name="imagens"]').value = '';
-      form.querySelector('[name="imagens"]').required = true;
-      document.getElementById('imagens-atuais').innerHTML = '';
-      document.getElementById('titulo-form').textContent = 'Adicionar Produto';
-      document.getElementById('cancelar-edicao').style.display = 'none';
-      document.getElementById('mensagem').textContent = '';
-      document.getElementById('erro').textContent = '';
-      form.querySelector('button[type="submit"]').textContent = 'Salvar';
     }
 
     document.getElementById('form-produto').addEventListener('submit', async (event) => {
       event.preventDefault();
       const form = event.target;
       const formData = new FormData(form);
-      const id = form.querySelector('[name="id"]').value;
-      const imagens = form.querySelector('[name="imagens"]').files;
-
-      if (!id && imagens.length === 0) {
-        document.getElementById('erro').textContent = 'Pelo menos uma imagem é obrigatória ao adicionar um produto.';
-        return;
-      }
 
       document.getElementById('mensagem').textContent = '';
       document.getElementById('erro').textContent = '';
 
       try {
-        console.log('Salvando:', id ? 'produto atualizado' : 'novo produto', 'para:', `${API_URL}/api/produtos${id ? '/' + id : ''}`);
-        const url = id ? `${API_URL}/api/produtos/${id}` : `${API_URL}/api/produtos`;
-        const method = id ? 'PUT' : 'POST';
-        const res = await fetch(url, {
-          method,
+        const res = await fetch(`${API_URL}/api/produtos`, {
+          method: 'POST',
           body: formData
         });
         if (!res.ok) {
           const erroJson = await res.json().catch(() => null);
-          throw new Error(erroJson?.error || `Erro ao ${id ? 'editar' : 'adicionar'} produto: ${res.status}`);
+          throw new Error(erroJson?.error || 'Erro ao adicionar produto');
         }
-        document.getElementById('mensagem').textContent = id ? 'Produto atualizado com sucesso!' : 'produto adicionado com sucesso!';
-        resetarFormulario();
+        document.getElementById('mensagem').textContent = 'Produto adicionado com sucesso!';
+        form.reset();
         carregarProdutos();
       } catch (error) {
-        console.error('Erro ao salvar:', error);
         document.getElementById('erro').textContent = error.message;
       }
     });
 
-    document.getElementById('cancelar-edicao').addEventListener('click', resetarFormulario);
-
-    document.addEventListener('DOMContentLoaded', () => {
-      console.log('Inicializando página de administração');
-      carregarProdutos();
-    });
+    document.addEventListener('DOMContentLoaded', carregarProdutos);
   </script>
 </body>
 </html>
+
