--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png">
   <link rel="manifest" href="logos/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/seu-codigo.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="site-header">
@@ -164,7 +165,7 @@
   </div>
 
   <div class="modal" id="imageModal">
-    <button class="modal-close" onclick="closeModal()">✕</button>
+    <button class="modal-close" onclick="closeModal()">×</button>
     <div class="modal-content">
       <div class="carrossel-imagens" id="modalCarrosselImagens"></div>
       <button class="carrossel-prev" onclick="moveModalCarrossel(-1)">◄</button>
