--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <div class="mobile-menu" id="mobileMenu">
     <nav class="mobile-nav">
       <a href="index.html">Promoções</a>
-      <a href="cupom.html">Cupom de Desconto</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="contato.html">Contato</a>
+      <a href="cupom">Cupom de Desconto</a>
+      <a href="sobre">Sobre</a>
+      <a href="contato">Contato</a>
     </nav>
     <aside class="mobile-sidebar">
       <h3>Categorias</h3>
