--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   </header>
 
   <nav>
-    <a href="index.html">Promoções</a>
-    <a href="cupom.html">Cupom de Desconto</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
+    <a href="index">Promoções</a>
+    <a href="cupom">Cupom de Desconto</a>
+    <a href="sobre">Sobre</a>
+    <a href="contato">Contato</a>
   </nav>
 
   <div class="container">
