--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </header>
 
   <nav>
-    <a href="index">Promoções</a>
+    <a href="">Promoções</a>
     <a href="cupom">Cupom de Desconto</a>
     <a href="sobre">Sobre</a>
     <a href="contato">Contato</a>
