--- a/index.html
+++ b/index.html
@@ -146,11 +146,12 @@
 
   <div class="robo-assistente">
     <a href="https://api.whatsapp.com/send?phone=5521975179737" target="_blank" rel="noopener noreferrer">
-      <img src="imagens/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
+      <img src="logos/robo.jpg" alt="Robô Assistente" class="robo-imagem" loading="lazy" width="60" height="60">
       <div class="robo-texto">Posso ajudar?</div>
     </a>
   </div>
 
+  <script type="module" src="firebase.js"></script>
   <script defer src="script.js"></script>
 </body>
 </html>
