--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -177,6 +177,8 @@
     });
 
     document.addEventListener('DOMContentLoaded', carregarProdutos);
+    <script type="module" src="firebase.js"></script>
+
   </script>
 </body>
 </html>
